--- a/counterApp/package.json
+++ b/counterApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@remixicon/react": "^4.2.0",
+    "dailymotion-sdk": "^0.1.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
